e_pval_empirical, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(e_plot_scatterplot)
 export(e_plot_table_prop)
 export(e_plot_ttest_pval)
 export(e_print_list_tree_hierarchy)
+export(e_pval_empirical)
 export(e_pval_stars)
 export(e_read_data_files)
 export(e_read_data_subdir_into_lists)
