--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(e_convert_logit)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
 export(e_data_convert_factor_to_numeric)
+export(e_data_var_labels_apply_from_table)
 export(e_data_var_labels_clear)
 export(e_derivative_finite_difference)
 export(e_duplicated_all)
