e_rfsrc_classification, bivariate partial plots updates, add sw_reduce_output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,9 +162,11 @@ importFrom(flextable,regulartable)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_reorder)
 importFrom(ggbeeswarm,geom_beeswarm)
+importFrom(ggplotify,as.ggplot)
 importFrom(ggpp,annotate)
 importFrom(ggpubr,as_ggplot)
 importFrom(graphics,abline)
+importFrom(graphics,coplot)
 importFrom(graphics,curve)
 importFrom(graphics,dotchart)
 importFrom(graphics,hist)
