e_data_var_labels_table_from_data, add function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(e_convert_probability_to_oddsratio)
 export(e_data_convert_factor_to_numeric)
 export(e_data_var_labels_apply_from_table)
 export(e_data_var_labels_clear)
+export(e_data_var_labels_table_from_data)
 export(e_derivative_finite_difference)
 export(e_duplicated_all)
 export(e_expand_grid_df)
