--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ export(e_table1_summaries)
 export(e_table_aggregate)
 export(e_table_print)
 export(e_table_sum_freq_prop)
+export(e_text_filename_replace_characters)
 export(e_text_unicode_to_ascii)
 export(e_ts_bootstrap_phase)
 export(e_ts_lowpass_filter_ifft_harmonics)
