--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(e_convert_logistic)
 export(e_convert_logit)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
+export(e_data_complete_by_variable_subset)
 export(e_data_convert_factor_to_numeric)
 export(e_data_var_labels_apply_from_table)
 export(e_data_var_labels_clear)
@@ -121,6 +122,7 @@ import(stats)
 import(stringr)
 import(tibble)
 import(tidyr)
+import(tidyselect)
 import(tsne)
 import(umap)
 importFrom(RColorBrewer,brewer.pal)
@@ -160,6 +162,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice_head)
 importFrom(dplyr,slice_tail)
 importFrom(ellipse,ellipse)
+importFrom(finalfit,missing_pattern)
 importFrom(flextable,regulartable)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_reorder)
@@ -227,6 +230,7 @@ importFrom(stats,BIC)
 importFrom(stats,IQR)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,cov)
 importFrom(stats,density)
