e_plot_lm_y_covar, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(e_plot_function_limit_range)
 export(e_plot_grid_corner_label)
 export(e_plot_grid_corner_label_list)
 export(e_plot_lm_diagnostics)
+export(e_plot_lm_y_covar)
 export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
@@ -278,6 +279,7 @@ importFrom(tidyr,uncount)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,ends_with)
+importFrom(tidyselect,one_of)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,glob2rx)
