--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(e_match_closest_in_range)
 export(e_message_capture)
 export(e_model_all_subsets_formula)
 export(e_model_binary_complete)
+export(e_model_selection)
 export(e_pilot_density_altitude)
 export(e_plot_blank)
 export(e_plot_bs_one_samp_dist)
@@ -126,6 +127,7 @@ import(tidyr)
 import(tidyselect)
 import(tsne)
 import(umap)
+importFrom(Hmisc,rcorr)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
@@ -141,6 +143,8 @@ importFrom(car,vif)
 importFrom(caret,confusionMatrix)
 importFrom(cli,rule)
 importFrom(cli,symbol)
+importFrom(corrplot,cor.mtest)
+importFrom(corrplot,corrplot)
 importFrom(cowplot,as_grob)
 importFrom(cowplot,plot_grid)
 importFrom(crayon,blue)
@@ -210,6 +214,8 @@ importFrom(modelr,rsquare)
 importFrom(moonBook,mycsv)
 importFrom(moonBook,mytable)
 importFrom(nortest,ad.test)
+importFrom(patchwork,plot_annotation)
+importFrom(patchwork,wrap_plots)
 importFrom(purrr,keep)
 importFrom(purrr,map2)
 importFrom(purrr,pluck)
@@ -252,6 +258,7 @@ importFrom(stats,qqplot)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,smooth.spline)
+importFrom(stats,step)
 importFrom(stats,supsmu)
 importFrom(stats,symnum)
 importFrom(stats,terms.formula)
@@ -280,6 +287,7 @@ importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,ends_with)
 importFrom(tidyselect,one_of)
+importFrom(tidyselect,where)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,glob2rx)
