e_plot_corr_matrix, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(e_plot_clean_numeric_nonnum_minmax)
 export(e_plot_compare_medians)
 export(e_plot_complete_by_variable_subset)
 export(e_plot_corr_ellipse)
+export(e_plot_corr_matrix)
 export(e_plot_extract_legend)
 export(e_plot_function_limit_range)
 export(e_plot_grid_corner_label)
@@ -109,6 +110,7 @@ export(e_vec_winsorize)
 export(erikmisc_conflicts)
 export(erikmisc_logo)
 export(erikmisc_packages)
+import(corrplot)
 import(datasets)
 import(dplyr)
 import(emmeans)
