--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(e_match_closest_in_range)
 export(e_message_capture)
 export(e_model_all_subsets_formula)
 export(e_model_binary_complete)
+export(e_model_extract_var_names)
 export(e_model_selection)
 export(e_pilot_density_altitude)
 export(e_plot_blank)
@@ -77,6 +78,7 @@ export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
+export(e_plot_model_diagnostics)
 export(e_plot_projection)
 export(e_plot_rf_vimp)
 export(e_plot_roc)
@@ -110,6 +112,7 @@ export(e_vec_winsorize)
 export(erikmisc_conflicts)
 export(erikmisc_logo)
 export(erikmisc_packages)
+import(car)
 import(corrplot)
 import(datasets)
 import(dplyr)
@@ -117,6 +120,7 @@ import(emmeans)
 import(ggplot2)
 import(ggpmisc)
 import(ggpubr)
+import(gvlma)
 import(labelled)
 import(parallel)
 import(patchwork)
@@ -177,6 +181,8 @@ importFrom(ggbeeswarm,geom_beeswarm)
 importFrom(ggplotify,as.ggplot)
 importFrom(ggpp,annotate)
 importFrom(ggpubr,as_ggplot)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
 importFrom(graphics,abline)
 importFrom(graphics,coplot)
 importFrom(graphics,curve)
