--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(e_match_closest_in_range)
 export(e_message_capture)
 export(e_model_all_subsets_formula)
 export(e_model_binary_complete)
+export(e_model_calc_resid)
 export(e_model_extract_var_names)
 export(e_model_selection)
 export(e_pilot_density_altitude)
@@ -124,6 +125,7 @@ import(gvlma)
 import(labelled)
 import(parallel)
 import(patchwork)
+import(qqplotr)
 import(randomForestSRC)
 import(rlang)
 import(stats)
@@ -134,6 +136,7 @@ import(tidyselect)
 import(tsne)
 import(umap)
 importFrom(Hmisc,rcorr)
+importFrom(MASS,stdres)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
@@ -264,6 +267,8 @@ importFrom(stats,predict)
 importFrom(stats,qchisq)
 importFrom(stats,qqplot)
 importFrom(stats,quantile)
+importFrom(stats,resid)
+importFrom(stats,rstudent)
 importFrom(stats,sd)
 importFrom(stats,smooth.spline)
 importFrom(stats,step)
