e_dist_test, new function, normal only

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(e_data_var_labels_apply_from_table)
 export(e_data_var_labels_clear)
 export(e_data_var_labels_table_from_data)
 export(e_derivative_finite_difference)
+export(e_dist_test)
 export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_extract_numbers_from_string)
@@ -123,6 +124,7 @@ import(ggpmisc)
 import(ggpubr)
 import(gvlma)
 import(labelled)
+import(nortest)
 import(parallel)
 import(patchwork)
 import(qqplotr)
@@ -294,6 +296,7 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,uncount)
 importFrom(tidyselect,all_of)
