--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,7 @@ export(e_data_var_labels_apply_from_table)
 export(e_data_var_labels_clear)
 export(e_data_var_labels_table_from_data)
 export(e_derivative_finite_difference)
-export(e_dist_test)
+export(e_distr_test)
 export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_extract_numbers_from_string)
@@ -183,6 +183,7 @@ importFrom(flextable,regulartable)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_reorder)
 importFrom(ggbeeswarm,geom_beeswarm)
+importFrom(ggplot2,theme)
 importFrom(ggplotify,as.ggplot)
 importFrom(ggpp,annotate)
 importFrom(ggpubr,as_ggplot)
@@ -228,6 +229,7 @@ importFrom(moonBook,mycsv)
 importFrom(moonBook,mytable)
 importFrom(nortest,ad.test)
 importFrom(patchwork,plot_annotation)
+importFrom(patchwork,wrap_elements)
 importFrom(patchwork,wrap_plots)
 importFrom(purrr,keep)
 importFrom(purrr,map2)
@@ -240,6 +242,7 @@ importFrom(readr,write_csv)
 importFrom(readr,write_lines)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
+importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(scales,percent)
 importFrom(sjPlot,css_theme)
@@ -294,6 +297,7 @@ importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(tibble,tribble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
