e_plot_model_diagnostics, add mcPlots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -210,6 +210,7 @@ importFrom(kableExtra,kable_paper)
 importFrom(kableExtra,kable_styling)
 importFrom(kableExtra,kbl)
 importFrom(knitr,kable)
+importFrom(labelled,get_variable_labels)
 importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
 importFrom(lmerTest,as_lmerModLmerTest)
