e_plot_model_diagnostics, new CooksD_Leverage_Resid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ importFrom(car,avPlots)
 importFrom(car,bcPower)
 importFrom(car,boxCox)
 importFrom(car,ncvTest)
+importFrom(car,outlierTest)
 importFrom(car,qqPlot)
 importFrom(car,spreadLevelPlot)
 importFrom(car,vif)
