e_plot_model_diagnostics, new Resid_histogram

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -189,6 +189,8 @@ importFrom(ggplotify,as.ggplot)
 importFrom(ggpp,annotate)
 importFrom(ggpubr,as_ggplot)
 importFrom(grDevices,dev.off)
+importFrom(grDevices,nclass.FD)
+importFrom(grDevices,nclass.Sturges)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
 importFrom(graphics,coplot)
