e_plot_model_diagnostics, add DHARMa_Resid and durbinWatsonTest

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ export(e_vec_winsorize)
 export(erikmisc_conflicts)
 export(erikmisc_logo)
 export(erikmisc_packages)
+import(DHARMa)
 import(car)
 import(corrplot)
 import(datasets)
@@ -142,6 +143,7 @@ importFrom(MASS,stdres)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
+importFrom(broom,tidy)
 importFrom(cAIC4,cAIC)
 importFrom(car,Anova)
 importFrom(car,avPlots)
