e_plot_missing, message one time per session

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -249,6 +249,7 @@ importFrom(readr,write_lines)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
 importFrom(rlang,expr)
+importFrom(rlang,inform)
 importFrom(rlang,sym)
 importFrom(scales,percent)
 importFrom(sjPlot,css_theme)
