e_truncate_limits, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(e_table_print)
 export(e_table_sum_freq_prop)
 export(e_text_filename_replace_characters)
 export(e_text_unicode_to_ascii)
+export(e_truncate_limits)
 export(e_ts_bootstrap_phase)
 export(e_ts_lowpass_filter_ifft_harmonics)
 export(e_ttest_alt_hyp_text)
