--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_extract_numbers_from_string)
 export(e_file_first_last)
+export(e_glm_power)
 export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
@@ -278,6 +279,7 @@ importFrom(stats,pf)
 importFrom(stats,ppoints)
 importFrom(stats,predict)
 importFrom(stats,qchisq)
+importFrom(stats,qnorm)
 importFrom(stats,qqplot)
 importFrom(stats,quantile)
 importFrom(stats,resid)
