e_data_class_align_between_datasets, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(e_convert_logistic)
 export(e_convert_logit)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
+export(e_data_class_align_between_datasets)
 export(e_data_convert_factor_to_numeric)
 export(e_data_var_labels_apply_from_table)
 export(e_data_var_labels_clear)
