e_health_functions_ALL, added many functions from my unmpdp package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(e_calc_bmi)
 export(e_calc_bmi_categories)
 export(e_calc_phq2_categories)
 export(e_calc_phq9_categories)
+export(e_calc_rmse)
 export(e_ccf_max)
 export(e_convert_Date_to_ExcelDate)
 export(e_convert_Datetime_to_ExcelDatetime)
@@ -46,6 +47,13 @@ export(e_extract_numbers_from_string)
 export(e_file_first_last)
 export(e_glm_power)
 export(e_headtail)
+export(e_health_calc_a1c_categories)
+export(e_health_calc_bmi)
+export(e_health_calc_bmi_categories)
+export(e_health_calc_cahps_cat_to_val)
+export(e_health_calc_phq2_categories)
+export(e_health_calc_phq9_categories)
+export(e_health_calc_poverty_ratio_FederalPovertyLevel)
 export(e_is_error)
 export(e_linear_interpolation)
 export(e_lm_bestsubset)
