e_health_calc_npsy_standardize_scores, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(e_health_calc_a1c_categories)
 export(e_health_calc_bmi)
 export(e_health_calc_bmi_categories)
 export(e_health_calc_cahps_cat_to_val)
+export(e_health_calc_npsy_standardize_scores)
 export(e_health_calc_phq2_categories)
 export(e_health_calc_phq9_categories)
 export(e_health_calc_poverty_ratio_FederalPovertyLevel)
